ui: fixed spacing between elements

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 body {
     /* height: 100vh; */
-    margin: 0 200px;
+    margin: 0 300px;
     /* margin: 0;
     padding: 0; */
     overflow: auto;
@@ -17,6 +17,10 @@ body {
     flex-direction: column;
     background-color: #292727;
     /* color: white; */
+}
+
+.sectionHeading {
+    padding-bottom: 10px;
 }
 
 /* Header */
@@ -55,12 +59,8 @@ header {
     margin: 100px auto;
 }
 
-/* .hero div {
-    margin: 16px;
-    padding: 16px;
-} */
 .leftHero {
-    width: 500px;
+    width: 70%;
     /* border: 2px solid red; */
 }
 
@@ -70,6 +70,7 @@ header {
 
 .portfolioPic {
     max-height: 400px;
+    max-width: 300px;
 }
 
 .leftHero h1 {
@@ -93,18 +94,20 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    /* padding: 32px; */
+    margin: 32px 0;
     gap: 32px;
 
 }
 
 .projects .projectCard {
-    border: 1px solid white;
+    border: 1px solid #999999;
     height: 300px;
-    width: 400px;
+    width: 350px;
     /* gap: 16px; */
     padding: 16px;
     border-radius: 10px;
+    text-align: justify;
+
 }
 
 .projects h2 {
@@ -118,6 +121,7 @@ header {
     justify-content: space-around;
     flex-wrap: wrap;
     gap: 32px;
+    margin: 32px 0;
 }
 
 .skillCard {
@@ -133,6 +137,7 @@ header {
 .skillCard > h2 {
     margin-top: 10px;
     color: #999999;
+
 }
 
 .skillCard > img {
